<resources>
    <string name="app_name">TasbihApp</string>
    <string name="tasbih_pro">Tasbih Pro</string>
    <string name="_000000">000000</string>
    <string name="list">List</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="dynamic_touch">Dynamic Touch</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="counter_pro">Counter Pro</string>
</resources>